--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
 highlight: 
@@ -88,6 +88,11 @@ live2d:
     height: 300
   mobile: 
     show: true
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy: 
