--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "gulp-uglify": "^3.0.1",
     "hexo": "^3.7.0",
     "hexo-admin": "^2.3.0",
+    "hexo-asset-image": "0.0.3",
     "hexo-cli": "^1.1.0",
     "hexo-deployer-git": "^1.0.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
+    "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.1",
+    "hexo-generator-search": "^2.4.0",
+    "hexo-generator-searchdb": "^1.0.8",
     "hexo-generator-tag": "^0.2.0",
     "hexo-helper-live2d": "^3.1.0",
     "hexo-renderer-ejs": "^0.3.1",
