--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gulp-uglify": "^3.0.1",
     "hexo": "^3.7.0",
     "hexo-admin": "^2.3.0",
-    "hexo-asset-image": "0.0.3",
+    "hexo-asset-image": "git+https://github.com/CodeFalling/hexo-asset-image.git",
     "hexo-cli": "^1.1.0",
     "hexo-deployer-git": "^1.0.0",
     "hexo-generator-archive": "^0.1.5",
@@ -24,9 +24,14 @@
     "hexo-generator-searchdb": "^1.0.8",
     "hexo-generator-tag": "^0.2.0",
     "hexo-helper-live2d": "^3.1.0",
+    "hexo-inject": "^1.0.0",
+    "hexo-math": "^3.0.4",
     "hexo-renderer-ejs": "^0.3.1",
+    "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.1"
+    "hexo-server": "^0.3.1",
+    "hexo-wordcount": "^6.0.1",
+    "live2d-widget-model-haruto": "^1.0.5"
   }
 }
