--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "hexo-server": "^0.3.1",
     "hexo-symbols-count-time": "^0.4.4",
     "hexo-wordcount": "^6.0.1",
-    "live2d-widget-model-haruto": "^1.0.5"
+    "live2d-widget-model-haruto": "^1.0.5",
+    "hexo-deployer-qinius": "1.0.4"
   },
   "devDependencies": {}
 }
